--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
+/* HEADER */
+
 .header-full-width {
     height: 105px;
     background-color: #2c3e50;
+    line-height: 105px;
+    /* text-align: center; */
 }
+
+
+/* SECTION ONE */
