--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .marg-top {
-    margin-top: 110px;
+    margin-top: 70px;
     text-align: center;
 }
 
@@ -24,9 +24,13 @@
 
 /* SECTION ONE */
 
-.section-one-hero-container {
+.green-hero-container {
     background-color: #1abc9c;
-    height: 678px;
+    height: 610px;
+}
+
+.box-hero {
+    height: 450px;
 }
 
 
@@ -36,3 +40,6 @@
     height: 100vh;
     background-color: #fff;
 }
+
+
+/* <!-- SECTION THREE - GREEN CONTAINER 2 --> */
