--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,14 @@
     text-align: left;
 }
 
+.margin-bottom {
+    margin-bottom: 50px;
+}
+
 
 /* HEADER */
 
-.header-full-width {
+.gray-bar-full-width {
     height: 105px;
     background-color: #2c3e50;
     line-height: 105px;
@@ -58,4 +62,15 @@
 .section-five-container-full-width {
     background-color: #2c3e50;
     /* height: 305px; */
+}
+
+
+/* <!-- SECTION SIX --> */
+
+.container-full-width {
+    height: 100px;
+    background-color: #1a252f;
+    line-height: 100px;
+    text-align: center;
+    color: white;
 }
