--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,56 @@
     margin-bottom: 70px;
 }
 
-
-/* HEADER */
-
-.gray-bar-full-width {
-    height: 105px;
-    background-color: #2c3e50;
-    line-height: 105px;
-    /* text-align: center; */
+body {
+    font-family: 'Montserrat', sans-serif;
+    ;
 }
+
+a:hover {
+    text-decoration: none;
+}
+
+
+/* -------------------------- */
+
+.navbar {
+    margin-bottom: 0px;
+    border: 0px;
+}
+
+.navbar.navbar-default {
+    background-color: #2c3e50;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.navbar-brand {
+    font-size: 42px;
+    line-height: 50px;
+}
+
+.pull-right {
+    list-style: none;
+    margin: 30px;
+}
+
+.navbar>.container>.navbar-header>a,
+.menu-header li a {
+    color: white;
+}
+
+.menu-header li a {
+    font-size: 25px;
+}
+
+@media screen and (max-width: 991px) {
+    .navbar-brand {
+        line-height: 28px;
+    }
+}
+
+
+/* copiato sezione header */
 
 
 /* SECTION ONE */
