--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,16 @@ a:hover {
 
 /* <!-- SECTION TWO PORTFOLIO --> */
 
+.portfolio-text {
+    color: #2c3e50;
+    font-size: 50px;
+    font-weight: 700;
+}
+
+.align-center {
+    text-align: center;
+}
+
 .hero-white-container {
     /* height: 90vh; */
     background-color: #fff;
@@ -151,6 +161,10 @@ a:hover {
 .center-margin {
     margin-top: 100px;
     margin-bottom: 100px;
+}
+
+.black-bg {
+    color: black;
 }
 
 
