--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,35 @@ a:hover {
     color: black;
 }
 
+.green-back-trans {
+    background-color: green;
+}
+
+.row .col-xs-12 img {
+    max-width: 100%;
+    border-radius: 10px;
+}
+
+.containar-images {
+    position: relative;
+}
+
+.overlay-img {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(26, 188, 156, 0.9);
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    border-radius: 10px;
+    opacity: 0.1;
+    transition: opacity 0.4s;
+}
+
+.overlay-img:hover {
+    opacity: 0.8;
+}
+
 
 /* <!-- SECTION THREE - GREEN CONTAINER 2 --> */
 
