--- a/css/style.css
+++ b/css/style.css
@@ -187,10 +187,6 @@ a:hover {
     color: black;
 }
 
-.green-back-trans {
-    background-color: green;
-}
-
 .row .col-xs-12 img {
     max-width: 100%;
     border-radius: 10px;
@@ -208,12 +204,22 @@ a:hover {
     top: 0%;
     left: 0%;
     border-radius: 10px;
-    opacity: 0.1;
+    opacity: 0;
     transition: opacity 0.4s;
 }
 
 .overlay-img:hover {
     opacity: 0.8;
+}
+
+.fa-plus {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 70px;
+    text-align: center;
+    color: white;
 }
 
 
