--- a/css/style.css
+++ b/css/style.css
@@ -126,25 +126,47 @@ a:hover {
     margin-right: 20px;
 }
 
-.star {
-    font-size: 80px;
-    color: white;
-    border-color: white;
+
+/* pasted logo star down here */
+
+.star-container {
+    margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
 }
 
-.star-logo-text {
-    display: none;
+.star {
+    margin: auto;
+    width: 300px;
+    max-width: 100%;
+}
+
+.fa-star {
+    width: 20%;
+    display: inline-block;
+    font-size: 30px;
+    color: white;
+    position: relative;
+    top: 5px;
+}
+
+.star::before,
+.star::after {
+    display: inline-block;
+    content: '';
+    width: 30%;
+    height: 4px;
+    border: 2px solid white;
+    border-radius: 2px;
+    background-color: white;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    vertical-align: middle;
+    color: white;
 }
 
 
-/* display star logo after 698px */
-
-@media screen and (min-width: 698px) {
-    .star-logo-text {
-        display: block;
-    }
-}
+/* pasted logo star up here */
 
 
 /* font scale down under734px */
@@ -158,7 +180,7 @@ a:hover {
 .back-col.box-hero.center-margin div:last-child {
     color: white;
     font-size: 32px;
-    margin: 20px 0;
+    margin: 20px auto;
 }
 
 
@@ -178,22 +200,21 @@ a:hover {
     color: #2c3e50;
 }
 
-.hr-inline.blue-color {
-    border-bottom: 10px solid #2c3e50;
+
+/* blue star section */
+
+.blue-back {
+    color: #2c3e50;
 }
 
-.star-715 {
-    display: none;
+.star.blue-back::before,
+.star.blue-back::after {
+    background-color: #2c3e50;
+    border-color: #2c3e50;
 }
 
 
-/* star shows up after 714px */
-
-@media screen and (min-width: 715px) {
-    .star-715 {
-        display: block;
-    }
-}
+/* copy to here */
 
 .hero-white-container {
     background-color: #fff;
