White & Blue Logos Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ a:hover {
 }
 
 
-/* blue star section */
+/* blue logo fixed from here */
 
 .blue-back {
     color: #2c3e50;
@@ -214,7 +214,7 @@ a:hover {
 }
 
 
-/* copy to here */
+/* blue logo fixed to here */
 
 .hero-white-container {
     background-color: #fff;
