--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ a:hover {
 }
 
 
-/* pasted logo star down here */
+/* white star logo down here */
 
 .star-container {
     margin-top: 30px;
@@ -166,7 +166,7 @@ a:hover {
 }
 
 
-/* pasted logo star up here */
+/* white star  logo up here */
 
 
 /* font scale down under734px */
@@ -201,7 +201,7 @@ a:hover {
 }
 
 
-/* blue logo fixed from here */
+/* blue star logo down here */
 
 .blue-back {
     color: #2c3e50;
@@ -214,7 +214,7 @@ a:hover {
 }
 
 
-/* blue logo fixed to here */
+/* blue star logo up here */
 
 .hero-white-container {
     background-color: #fff;
