--- a/css/style.css
+++ b/css/style.css
@@ -1,389 +1,346 @@
-/* UTILITY */
-
-.back-col {
-    /* background-color: rgb(214, 141, 141); */
-}
-
-.padding-around {
-    padding: 20px;
-}
-
-.marg-top {
-    margin-top: 70px;
-    text-align: center;
-}
-
-.align-left {
-    text-align: left;
-}
-
-.margin-bottom {
-    margin-bottom: 70px;
-}
-
-.margin-bottom-50 {
-    margin-bottom: 50px;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    ;
-}
-
-a:hover {
-    text-decoration: none;
-}
-
-.white-text {
-    color: white;
-}
-
-.green-color {
-    color: #1cbc9c;
-}
-
-.white-color {
-    color: white;
-}
-
-
-/* -------------------------- */
-
-
-/* HEADER */
-
-.navbar {
-    margin-bottom: 0px;
-    border: 0px;
-}
-
-.navbar.navbar-default {
-    background-color: #2c3e50;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-.navbar-brand {
-    font-size: 42px;
-    line-height: 50px;
-}
-
-.pull-right {
-    list-style: none;
-    margin: 30px;
-}
-
-.navbar>.container>.navbar-header>a,
-.menu-header li a {
-    color: white;
-}
-
-.menu-header li a {
-    font-size: 25px;
-}
-
-.menu-header li a:hover,
-.container .navbar-header>a:hover {
-    color: orange;
-    transition: 0.7s;
-}
-
-@media screen and (max-width: 991px) {
-    .navbar-brand {
-        line-height: 28px;
-    }
-}
-
-
-/* SECTION ONE */
-
-.green-hero-container {
-    background-color: #1abc9c;
-    /* height: 610px; */
-}
-
-.avatar {
-    height: 250px;
-    background-color: #1abc9c;
-}
-
-.avatar+h1 {
-    color: white;
-    font-size: 70px;
-    font-weight: 700;
-}
-
-.hr-inline {
-    display: inline-block;
-    width: 150px;
-    border-bottom: 10px solid white;
-    border-top: 0px;
-    border-radius: 8%;
-    text-align: center;
-}
-
-.hr-inline:first-child {
-    margin-right: 20px;
-}
-
-
-/* white star logo down here */
-
-.star-container {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    text-align: center;
-}
-
-.star {
-    margin: auto;
-    width: 300px;
-    max-width: 100%;
-}
-
-.fa-star {
-    width: 20%;
-    display: inline-block;
-    font-size: 30px;
-    color: white;
-    position: relative;
-    top: 5px;
-}
-
-.star::before,
-.star::after {
-    display: inline-block;
-    content: '';
-    width: 30%;
-    height: 4px;
-    border: 2px solid white;
-    border-radius: 2px;
-    background-color: white;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    vertical-align: middle;
-    color: white;
-}
-
-
-/* white star  logo up here */
-
-
-/* font scale down under734px */
-
-@media screen and (max-width: 734px) {
-    .avatar+h1 {
-        font-size: 30px
-    }
-}
-
-.back-col.box-hero.center-margin div:last-child {
-    color: white;
-    font-size: 32px;
-    margin: 20px auto;
-}
-
-
-/* <!-- SECTION TWO PORTFOLIO --> */
-
-.portfolio-text {
-    color: #2c3e50;
-    font-size: 50px;
-    font-weight: 700;
-}
-
-.align-center {
-    text-align: center;
-}
-
-.blue-color {
-    color: #2c3e50;
-}
-
-
-/* blue star logo down here */
-
-.blue-back {
-    color: #2c3e50;
-}
-
-.star.blue-back::before,
-.star.blue-back::after {
-    background-color: #2c3e50;
-    border-color: #2c3e50;
-}
-
-
-/* blue star logo up here */
-
-.hero-white-container {
-    background-color: #fff;
-    margin-bottom: 100px;
-}
-
-.center-margin {
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-.black-bg {
-    color: black;
-}
-
-.row .col-xs-12 img {
-    max-width: 100%;
-    border-radius: 10px;
-}
-
-.containar-images {
-    position: relative;
-}
-
-.overlay-img {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(26, 188, 156, 0.9);
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    border-radius: 10px;
-    opacity: 0;
-    transition: opacity 0.4s;
-}
-
-.overlay-img:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
-
-.fa-plus {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 70px;
-    text-align: center;
-    color: white;
-}
-
-
-/* <!-- SECTION THREE - GREEN CONTAINER 2 --> */
-
-.text-increase {
-    font-size: 17px;
-}
-
-.btn-container {
-    text-align: center;
-}
-
-.btn-default {
-    width: 236px;
-    height: 56px;
-    background-color: #1abc9c;
-    border: 2px solid white;
-    color: white;
-    transition: color .2s ease-in, border ease-in .2s;
-}
-
-.btn-default:hover {
-    border: transparent;
-    color: black;
-}
-
-.fa-download {
-    padding: 0 15px;
-}
-
-
-/* <!-- SECTION FOUR - CONTACT ME --> */
-
-form .form-group {
-    margin-bottom: 30px;
-}
-
-form .form-group label {
-    color: #6c757d;
-}
-
-form .form-group input[type="text"],
-form .form-group input[type="email"],
-form .form-group textarea {
-    border: 0;
-    border-bottom: 3px solid rgb(206, 204, 204);
-    box-shadow: none;
-}
-
-form label {
-    font-size: 35px;
-}
-
-.btn-lg-edit {
-    color: white;
-    background-color: #1abc9c;
-    width: 102px;
-    height: 63px;
-    margin-bottom: 30px;
-    border-color: transparent;
-    transition: background-color 0.4s;
-    font-size: larger;
-}
-
-.btn-lg-edit:hover {
-    background-color: #1e927b;
-    border-color: transparent;
-}
-
-
-/* <!-- SECTION FIVE --> */
-
-.section-five-container-full-width {
-    background-color: #2c3e50;
-    /* height: 305px; */
-}
-
-.col-xs-3.square-round {
-    width: 80px;
-    height: 80px;
-    border: 2px solid white;
-    border-radius: 100%;
-    line-height: 80px;
-    margin-right: 22px;
-}
-
-.col-xs-3.square-round:last-child {
-    margin-right: 0px;
-}
-
-.col-xs-3.square-round .fab {
-    font-size: 30px;
-}
-
-.col-xs-3.square-round a {
-    color: #1cbc9c;
-}
-
-.col-xs-3.square-round:hover a {
-    color: black;
-}
-
-.col-xs-3.square-round:hover {
-    background-color: white;
-    cursor: pointer;
-}
-
-.marg-top.back-col.margin-bottom-50>h2,
-.marg-top.back-col.margin-bottom-50>div {
-    color: white;
-}
-
-
-/* <!-- SECTION SIX --> */
-
-.container-full-width {
-    height: 100px;
-    background-color: #1a252f;
-    line-height: 100px;
-    text-align: center;
-    color: white;
-}
+        /* UTILITY */
+        
+        .back-col {
+            /* background-color: rgb(214, 141, 141); */
+        }
+        
+        .padding-around {
+            padding: 20px;
+        }
+        
+        .marg-top {
+            margin-top: 70px;
+            text-align: center;
+        }
+        
+        .align-left {
+            text-align: left;
+        }
+        
+        .margin-bottom {
+            margin-bottom: 70px;
+        }
+        
+        .margin-bottom-50 {
+            margin-bottom: 50px;
+        }
+        
+        body {
+            font-family: 'Montserrat', sans-serif;
+            ;
+        }
+        
+        a:hover {
+            text-decoration: none;
+        }
+        
+        .white-text {
+            color: white;
+        }
+        
+        .green-color {
+            color: #1cbc9c;
+        }
+        
+        .white-color {
+            color: white;
+        }
+        /* -------------------------- */
+        /* HEADER */
+        
+        .navbar {
+            margin-bottom: 0px;
+            border: 0px;
+        }
+        
+        .navbar.navbar-default {
+            background-color: #2c3e50;
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+        
+        .navbar-brand {
+            font-size: 42px;
+            line-height: 50px;
+        }
+        
+        .pull-right {
+            list-style: none;
+            margin: 30px;
+        }
+        
+        .navbar>.container>.navbar-header>a,
+        .menu-header li a {
+            color: white;
+        }
+        
+        .menu-header li a {
+            font-size: 25px;
+        }
+        
+        .menu-header li a:hover,
+        .container .navbar-header>a:hover {
+            color: orange;
+            transition: 0.7s;
+        }
+        
+        @media screen and (max-width: 991px) {
+            .navbar-brand {
+                line-height: 28px;
+            }
+        }
+        /* SECTION ONE */
+        
+        .green-hero-container {
+            background-color: #1abc9c;
+            /* height: 610px; */
+        }
+        
+        .avatar {
+            height: 250px;
+            background-color: #1abc9c;
+        }
+        
+        .avatar+h1 {
+            color: white;
+            font-size: 70px;
+            font-weight: 700;
+        }
+        
+        .hr-inline {
+            display: inline-block;
+            width: 150px;
+            border-bottom: 10px solid white;
+            border-top: 0px;
+            border-radius: 8%;
+            text-align: center;
+        }
+        
+        .hr-inline:first-child {
+            margin-right: 20px;
+        }
+        /* white star logo down here */
+        
+        .star-container {
+            margin-top: 30px;
+            margin-bottom: 30px;
+            text-align: center;
+        }
+        
+        .star {
+            margin: auto;
+            width: 300px;
+            max-width: 100%;
+        }
+        
+        .fa-star {
+            width: 20%;
+            display: inline-block;
+            font-size: 30px;
+            color: white;
+            position: relative;
+            top: 5px;
+        }
+        
+        .star::before,
+        .star::after {
+            display: inline-block;
+            content: '';
+            width: 30%;
+            height: 4px;
+            border: 2px solid white;
+            border-radius: 2px;
+            background-color: white;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            vertical-align: middle;
+            color: white;
+        }
+        /* white star  logo up here */
+        /* font scale down under734px */
+        
+        @media screen and (max-width: 734px) {
+            .avatar+h1 {
+                font-size: 30px
+            }
+        }
+        
+        .back-col.box-hero.center-margin div:last-child {
+            color: white;
+            font-size: 32px;
+            margin: 20px auto;
+        }
+        /* <!-- SECTION TWO PORTFOLIO --> */
+        
+        .portfolio-text {
+            color: #2c3e50;
+            font-size: 50px;
+            font-weight: 700;
+        }
+        
+        .align-center {
+            text-align: center;
+        }
+        
+        .blue-color {
+            color: #2c3e50;
+        }
+        /* blue star logo down here */
+        
+        .blue-back {
+            color: #2c3e50;
+        }
+        
+        .star.blue-back::before,
+        .star.blue-back::after {
+            background-color: #2c3e50;
+            border-color: #2c3e50;
+        }
+        /* blue star logo up here */
+        
+        .hero-white-container {
+            background-color: #fff;
+            margin-bottom: 100px;
+        }
+        
+        .center-margin {
+            margin-top: 100px;
+            margin-bottom: 100px;
+        }
+        
+        .black-bg {
+            color: black;
+        }
+        
+        .row .col-xs-12 img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+        
+        .containar-images {
+            position: relative;
+        }
+        
+        .overlay-img {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(26, 188, 156, 0.9);
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            border-radius: 10px;
+            opacity: 0;
+            transition: opacity 0.4s;
+        }
+        
+        .overlay-img:hover {
+            opacity: 0.8;
+            cursor: pointer;
+        }
+        
+        .fa-plus {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 70px;
+            text-align: center;
+            color: white;
+        }
+        /* <!-- SECTION THREE - GREEN CONTAINER 2 --> */
+        
+        .text-increase {
+            font-size: 17px;
+        }
+        
+        .btn-container {
+            text-align: center;
+        }
+        
+        .btn-default {
+            width: 236px;
+            height: 56px;
+            background-color: #1abc9c;
+            border: 2px solid white;
+            color: white;
+            transition: color .2s ease-in, border ease-in .2s;
+        }
+        
+        .btn-default:hover {
+            border: transparent;
+            color: black;
+        }
+        
+        .fa-download {
+            padding: 0 15px;
+        }
+        /* <!-- SECTION FOUR - CONTACT ME --> */
+        
+        form .form-group {
+            margin-bottom: 30px;
+        }
+        
+        form .form-group label {
+            color: #6c757d;
+        }
+        
+        form .form-group input[type="text"],
+        form .form-group input[type="email"],
+        form .form-group textarea {
+            border: 0;
+            border-bottom: 3px solid rgb(206, 204, 204);
+            box-shadow: none;
+        }
+        
+        form label {
+            font-size: 35px;
+        }
+        
+        .btn-lg-edit {
+            color: white;
+            background-color: #1abc9c;
+            width: 102px;
+            height: 63px;
+            margin-bottom: 30px;
+            border-color: transparent;
+            transition: background-color 0.4s;
+            font-size: larger;
+        }
+        
+        .btn-lg-edit:hover {
+            background-color: #1e927b;
+            border-color: transparent;
+        }
+        /* <!-- SECTION FIVE --> */
+        
+        .section-five-container-full-width {
+            background-color: #2c3e50;
+            color: white;
+        }
+        
+        .row .col-xs-12 .list-inline li>a {
+            display: inline-block;
+            width: 55px;
+            height: 55px;
+            line-height: 55px;
+            color: white;
+            border: 3px solid white;
+            border-radius: 100%;
+            transition: color 0.4s, background-color 0.4s;
+            font-size: 20px;
+            margin-top: 20px;
+        }
+        
+        .row .col-xs-12 .list-inline li>a:hover {
+            background-color: white;
+            color: black;
+        }
+        /* <!-- SECTION SIX --> */
+        
+        .container-full-width {
+            height: 100px;
+            background-color: #1a252f;
+            line-height: 100px;
+            text-align: center;
+            color: white;
+        }
