--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
         
         .menu-header li a:hover,
         .container .navbar-header>a:hover {
-            color: orange;
+            color: #1abc9c;
             transition: 0.7s;
         }
         
